# lectrick

./: LICENSE  README.md  pyproject.toml
.github/: python.yml
.github/workflows/: python-package.yml
examples/: chars  chars.csv  hello  press  press.csv  quiet  quiet.csv
lectrick/: __init__.py  __main__.py  char_image.py  compare.py  crop_image.py  fire.py  font.py  generate_overlays.py  generate_shapes.py  generate_svgs.py  lookup.py  map_program.py  reverse_lookup.py  run.py  watch.py
lectrick/tiles/: __init__.py  base.py  clock.py  conditional_horizontal_wire.py  cross_wire.py  decrement.py  double.py  horizontal_wire.py  increment.py  infinite_power_source.py  light_block.py  math_tile.py  not.py  one_way_base.py  one_way_left.py  one_way_right.py  power_source.py  press_detector.py  split.py  vertical_wire.py  whitespace.py
programs/: hello.csv
shapes/: cross_wire.json  horizontal_wire.json  light_block.json  one_way_left.json  one_way_right.json  power_source.json  vertical_wire.json
tests/: test_examples.py
web/src/: canvas.ts  charImage.ts  compare.ts  logImage.ts  lookup.ts  reverseLookup.ts  testWindow.ts  tilesList.ts
web/src/tiles/: base.ts  clock.ts  conditionalHorizontalWire.ts  crossWire.ts  decrement.ts  double.ts  horizontalWire.ts  increment.ts  infinitePowerSource.ts  lightBlock.ts  not.ts  oneWayBase.ts  oneWayLeft.ts  oneWayRight.ts  powerSource.ts  pressDetector.ts  split.ts  verticalWire.ts
